--- a/public/admin/assets/scss/_sidebar.scss
+++ b/public/admin/assets/scss/_sidebar.scss
@@ -461,7 +461,7 @@
           color: $sidebar-tinted-menu-color;
           .menu-icon {
             i {
-              color: white;
+              color: black;
             }
           }
           i {
