--- a/public/admin/assets/scss/_layouts.scss
+++ b/public/admin/assets/scss/_layouts.scss
@@ -153,7 +153,7 @@
             }
             &:hover {
               &:before {
-                background-color: white;
+                background-color: black;
               }
             }
             }
