--- a/public/admin/assets/scss/components/_misc.scss
+++ b/public/admin/assets/scss/components/_misc.scss
@@ -3,7 +3,7 @@ body,
 html {
   overflow-x: hidden;
   padding-right: 0 !important; // resets padding right added by Bootstrap modal
-  background-color: #86246c;
+  background-color: RGB(230 234 239 );
 }
 
 *:-moz-full-screen,
