--- a/public/admin/assets/scss/components/plugin-overrides/_wysieditor.scss
+++ b/public/admin/assets/scss/components/plugin-overrides/_wysieditor.scss
@@ -88,7 +88,7 @@
     .toolbar .wysihtml-action-active,
     .toolbar a.wysihtml-command-active {
         background: #222;
-        color: white;
+        color: black;
     }
 
     .toolbar .block {
@@ -117,7 +117,7 @@
     .editor-container-tag {
         padding: 5px 10px;
         position: absolute;
-        color: white;
+        color: black;
         background: rgba(0,0,0,0.8);
         width: 100px;
         margin-left: -50px;
